--- a/hetzner/inventory.ini
+++ b/hetzner/inventory.ini
@@ -1,4 +1,2 @@
 [master]
-itedu-dns-master ansible_host=135.181.89.145 ansible_user=root
-[slave]
-itedu-dns-slave ansible_host=95.217.19.172 ansible_user=root
+itedu-web-web ansible_host=135.181.89.145 ansible_user=root
